[package]
name = "kiri-csma"
version = "0.1.0"
edition = "2021"

[dependencies]
nb = "1.0"
rand = { version = "0.8", default-features = false }
heapless = "0.7"

kiri-protocol = { path = "../protocol" }

defmt = { version = "0.3", optional = true }
log = { version = "0.4", optional = true }

[features]
default = []
defmt = ["dep:defmt", "kiri-protocol/defmt"]
log = ["dep:log"]