[package]
name = "kiri-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
cobs = { version = "0.1.4", default-features = false }
packed_struct = { version = "0.10", default-features = false }

heapless = "0.7"

crc = "3.0"
hex = { version = "0.4", default-features = false }

defmt = { version = "0.3", optional = true }

[features]
default = []
defmt = ["dep:defmt"]